              and formsLayeredSolidTorusTop() are now called recognise(),
              recogniseFromBase() and recogniseFromTop(), and now return a
              std::unique_ptr instead of a raw pointer.
              The old names are kept as deprecated aliases.
            - Added copy construction and copy assignment.
            - Added member and global swap() functions.
            - Deprecated clone().  Just use the copy constructor instead.
            - Routine transform() now takes its arguments by reference.
            - Routine flatten() no longer takes a triangulation argument
              (since this was redundant), and now returns by value.
            - All access to the underlying triangulation is now const only.
        Class LayeredTorusBundle:
            - Routine coreIso() returns by const reference, not by pointer.
            - Routine isLayeredTorusBundle() is now called recognise(), takes
              its triangulation argument by const reference (not pointer), and
              returns a std::unique_ptr instead of a raw pointer.
              The old name is kept as a deprecated alias.
            - Added copy construction and copy assignment.
            - Added member and global swap() functions.
        Class Layering:
            - Added copy construction and copy assignment.
            - All access to the underlying triangulation is now const only.
        Class LensSpace:
            - Added member and global swap() functions.
        Class LessDeref:
            - Removed completely.  Just use a lamba if you need to.
        Class LightweightSequence<T>:
            - Added member and global swap() functions.
            - Added a constructor that takes a combination of elements
              and iterator pairs.
            - Replaced the old SubsequenceCompareFirstPtr with the new
              SubsequenceCompareFirst, which is significantly redesigned,