@@ -634,6 +634,7 @@ Version 7.0  [ 10 December, 2021 ]
               The old names are kept as deprecated aliases.
             - Added copy construction and copy assignment.
             - Added member and global swap() functions.
+            - Added comparison operators == and !=.
             - Deprecated clone().  Just use the copy constructor instead.
             - Routine transform() now takes its arguments by reference.
             - Routine flatten() no longer takes a triangulation argument
@@ -1226,6 +1227,7 @@ Version 7.0  [ 10 December, 2021 ]
               of using several reference arguments for output.
             - Renamed nAnnuli() to countAnnuli().  The old name is kept
               as a deprecated alias.
+            - All subclasses now have comparison operators == and !=.
             - All access to the underlying triangulation is now const only.
         Class SatBlockModel:
             - New class to replace SatBlockStarter.
